# ThisWorldWasWritten

./: .gitignore  GETTING_STARTED.md  pyproject.toml  readme.md  requirements.txt
.github/ISSUE_TEMPLATE/: contribution.yml
.github/scripts/: extract_submission.py
.github/workflows/: contribute.yml  pages.yml
configs/: world_config.yaml
data/feedback/: chronicle.jsonl  contributions.jsonl
data/wiki/: categories.jsonl  links.jsonl  pages.jsonl  references.jsonl
data/world/: entities.jsonl  events.jsonl  relations.jsonl  sources.jsonl  timeline.jsonl  validation_report.json  world_bible.json  world_state.json
prompts/: contribute.md  evolve_world.md  generate_entities.md  generate_events.md  generate_relations.md  generate_sources.md  generate_world_bible.md  render_event_page.md  render_wiki_page.md  repair_world_from_feedback.md  validate_consistency.md
scripts/: _common.py  build_static_site.py  contribute.py  evolve.py  expand_world.py  generate_entities.py  generate_events.py  generate_relations.py  generate_sources.py  generate_world.py  make_demo_world.py  render_wiki_pages.py  repair_world.py  run_pipeline.py  validate_world.py
site_output/: all-pages.html  categories.html  contribute.html  index.html  timeline.html
site_output/category/: 1722-in-asteria.html  1760-births.html  1789-establishments-in-asteria.html  1805-births.html  1810-births.html  1815-births.html  1820-deaths.html  1823-disasters.html  1825-deaths.html  (+797 more)
tests/: test_contribute.py  test_evolve.py  test_rendering.py  test_repair.py  test_schemas.py  test_validators.py
(+235 files in other folders)
