[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-wiki-world"
version = "0.1.0"
description = "A two-layer synthetic fictional knowledge world rendered as a Wikipedia-style static site."
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "pydantic>=2.5.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["synthetic_world*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
